# Thoughts

./: .gitignore  Makefile  README.md  ir.mirsobhan.apps.Thoughts.json  meson.build  pypi-dependencies.json  pyproject.toml
data/: ir.mirsobhan.apps.Thoughts.desktop.in  ir.mirsobhan.apps.Thoughts.gschema.xml  ir.mirsobhan.apps.Thoughts.metainfo.xml.in  ir.mirsobhan.apps.Thoughts.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  fa.po  meson.build  messages.pot  thoughts.pot
scripts/: update-po.sh
src/: main.py  meson.build  thoughts.gresource.xml  thoughts.in  window.blp  window.py
src/lib/: __init__.py  manager.py  model.py  tests.py
src/ui/: __init__.py  canvas_screen.blp  canvas_screen.py  filter_widget.blp  filter_widget.py  intro_page.blp  intro_page.py  styles.css  tag_widget.blp  tag_widget.py  thought_widget.blp  thought_widget.py  utils.py  window.blp  window.py
src/views/: thought_widget.blp  thought_widget.py  thought_widget.ui  window.blp  window.py  window.ui
